<resources>
    <string name="app_name" translatable="false">CustoMIUIzerMod</string>
	<string name="app_about">About</string>
	<string name="about_version">Version %1$s</string>
	<string name="about_dev">by Mikanoshi, Mod by Strawing</string>
	<string name="about_about_mod">This CustoMIUIzerMod version is created by Strawing, which is target at adapting MIUI12.5/13, Android 11/12 and futher.</string>
	<string name="about_dynamic">Generally, mods require soft reboot to be activated or deactivated, but those marked with ⟲ only require one soft reboot after their value was changed from default to custom one, subsequent changes are applied immediately.</string>
	<string name="about_unsupported">Mods marked with ⨯ are not supported on this device.</string>
	<string name="title_activity_main" translatable="false">@string/app_name</string>
	<string name="title_snoozed">Snoozed notifications</string>
	<string name="menu_update">Update</string>
	<string name="snooze_unsnooze">Unsnooze this notification</string>
	<string name="snooze_cancel">Mark as dismissed</string>
	<string name="snooze_restore">Mark as pending</string>
	<string name="snooze_fetch_fail">Unable to fetch snoozed notifications list</string>
	<string name="snooze_empty">No snoozed notifications</string>
	<string name="snooze_messages">Messages</string>
	<string name="snooze_channel">Channel</string>
	<string name="snooze_created">Created</string>
	<string name="snooze_updated">Updated</string>
	<string name="snooze_repost">Repost</string>
	<string name="mods">Mods</string>
	<string name="mods_actions">Actions</string>
	<string name="enable_mod">Enable mod</string>
	<string name="system_mods">System</string>
	<string name="system_mods_screen">Screen</string>
	<string name="system_mods_screen_rotation">Rotation</string>
	<string name="system_mods_screen_backlight">Backlight</string>
	<string name="system_mods_audio">Audio</string>
	<string name="system_mods_vibration">Vibration</string>
	<string name="system_mods_toasts">Toasts</string>
	<string name="system_statusbaricons_title">Hide icons</string>
	<string name="system_statusbaricons_summ">Manage status bar icons visibility</string>
	<string name="system_statusbaricons_battery1_title">Battery image</string>
	<string name="system_statusbaricons_battery2_title">Battery charge percentage</string>
	<string name="system_statusbaricons_battery3_title">Charging indicator</string>
	<string name="system_statusbaricons_battery_summ">Can be overlayed on top of battery image on some ROMs</string>
	<string name="system_statusbaricons_alarm_title">Alarm</string>
	<string name="system_statusbaricons_alarm_summ">Hide completely</string>
	<string name="system_statusbaricons_alarmn_title">Selective alarm icon visibility</string>
	<string name="system_statusbaricons_alarmn_summ">Show alarm icon only during the defined number of hours before next alarm</string>
	<string name="system_statusbaricons_signal_title">Mobile network signal</string>
	<string name="system_statusbaricons_nosims_title">No SIM card</string>
	<string name="system_statusbaricons_volte_title" translatable="false">VoLTE</string>
	<string name="system_statusbaricons_vowifi_title" translatable="false">VoWiFi</string>
	<string name="system_statusbaricons_vpn_title" translatable="false">VPN</string>
	<string name="system_statusbaricons_hotspot_title">Hotspot</string>
	<string name="system_statusbaricons_profile_title">Work profile</string>
	<string name="system_statusbaricons_sound_title">Sound profiles</string>
	<string name="system_statusbaricons_dnd_title">Do not disturb mode</string>
	<string name="system_statusbaricons_headset_title">Headset</string>
	<string name="system_statusbaricons_mute_title">Call: muted mic</string>
	<string name="system_statusbaricons_speaker_title">Call: speakerphone</string>
	<string name="system_statusbaricons_record_title">Call: recording</string>
	<string name="system_batteryindicator_title">Battery bar indicator</string>
	<string name="system_batteryindicator_summ">Display battery charge level as a colored bar</string>
	<string name="system_batteryindicator_limitvis_title">Limited visibility</string>
	<string name="system_batteryindicator_limitvis_summ">Show only in notificaton drawer and on lock screen</string>
	<string name="system_batteryindicator_rounded_title">Rounded ends</string>
	<string name="system_batteryindicator_centered_title">Centered</string>
	<string name="system_batteryindicator_height_title">Bar height</string>
	<string name="system_batteryindicator_padding_title">Horizontal padding</string>
	<string name="system_batteryindicator_colorval1_title">Full charge color</string>
	<string name="system_batteryindicator_colorval2_title">Low charge color</string>
	<string name="system_batteryindicator_colorval3_title">Battery saver color</string>
	<string name="system_batteryindicator_colorval4_title">Charging color</string>
	<string name="system_batteryindicator_lowlevel_title">Low charge level</string>
	<string name="system_batteryindicator_test_title">Test</string>
	<string name="system_batteryindicator_test_summ">Animate bar from 100% to 0% in discharging state</string>
	<string name="system_statusbarheight_title">Status bar height</string>
	<string name="system_statusbarcolor_title">Status bar background color</string>
	<string name="system_statusbarcolor_summ">Make status bar and app\'s action bar background colors the same where possible</string>
	<string name="system_statusbarcolor_apps_title">Black list</string>
	<string name="system_shortcut_app_title">Shortcut app</string>
	<string name="system_shortcut_app_summ">Open selected app when shortcut icon in notification drawer\'s header is tapped</string>
	<string name="system_clock_app_title">Clock app</string>
	<string name="system_clock_app_summ">Open selected app when clock in notification drawer\'s header is tapped</string>
	<string name="system_calendar_app_title">Calendar app</string>
	<string name="system_calendar_app_summ">Open selected app when date in notification drawer\'s header is tapped</string>
	<string name="system_clockseconds_title">Show seconds</string>
	<string name="system_clockseconds_summ">Display seconds in the status bar clock</string>
	<string name="system_clockseconds_sync_title">Synchronization</string>
	<string name="system_clockseconds_sync_summ">Try to update value at a specified moment</string>
	<string name="system_maxsbicons_title">Notification icons limit</string>
	<string name="system_maxsbicons_summ">Number of notification icons to display before turning them into dots</string>
	<string name="system_mobiletypeicon_title">Hide mobile network type</string>
	<string name="system_mobiletypeicon_summ">Remove mobile network type icon from status bar</string>
	<string name="system_networkindicator_title">Network activity indicators</string>
	<string name="system_networkindicator_summ">Configure Mobile data and Wi-Fi traffic indicators</string>
	<string name="system_4gtolte_title">Show LTE icon for 4G</string>
	<string name="system_hidemoreicon_title">No hidden icons indicator</string>
	<string name="system_hidemoreicon_summ">Do not show icon with 3 dots when notification icons are hidden</string>
	<string name="system_nonetspeedseparator_title">No network speed separator</string>
	<string name="system_nonetspeedseparator_summ">Do not show vertical line between time and network speed on devices with waterdrop notches</string>
	<string name="system_netspeedinterval_title">Network speed update interval</string>
	<string name="system_detailednetspeed_title">Detailed network speed indicator</string>
	<string name="system_detailednetspeed_summ">Show incoming and outgoing network speeds separately</string>
	<string name="system_minbrightness_title">Minimum auto brightness</string>
	<string name="system_maxbrightness_title">Maximum auto brightness</string>
	<string name="system_autobrightness_hlg_title">Always use non-linear scale</string>
	<string name="system_autobrightness_hlg_summ">Enable if brightness percentages in mod do not match real ones on Android versions below 9</string>
	<string name="system_vibration_amp_val_title">Vibration intensity</string>
	<string name="system_vibration_amp_val_summ">Changes either duration or strength of the vibration depending on amplitude control support by device</string>
	<string name="system_vibration_amp_ringer_title">Calls</string>
	<string name="system_vibration_amp_notif_title">Notifications</string>
	<string name="system_vibration_amp_other_title">Everything else</string>
	<string name="system_vibration_amp_period_title">Time period</string>
	<string name="system_noscreenlock_title">Disable screen lock</string>
	<string name="system_noscreenlock_req_summ">Some devices might not work without unlocking once after boot</string>
	<string name="system_noscreenlock_summ">Selectively disable screen lock (does not change security for any apps and does not remove fingerprint data)</string>
	<string name="system_noscreenlock_scr_title">Skip lock screen</string>
	<string name="system_noscreenlock_scr_summ">Do not show lock screen at all when screen lock is disabled</string>
	<string name="system_noscreenlock_nofaceunlock_title">Skip face unlock</string>
	<string name="system_noscreenlock_nofaceunlock_summ">Do not start face unlock when screen lock is disabled</string>
	<string name="system_noscreenlock_wifi_title">Trusted Wi-Fi networks</string>
	<string name="system_noscreenlock_wifi_summ">Temporarily disable screen lock while connected to these networks</string>
	<string name="system_noscreenlock_bt_title">Trusted Bluetooth devices</string>
	<string name="system_noscreenlock_bt_summ">Temporarily disable screen lock while these devices are connected</string>
	<string name="system_mods_lockscreen">Lock screen</string>
	<string name="system_charginginfo_view_title">How to display</string>
	<string name="system_charginginfo_current_title">Charging current</string>
	<string name="system_charginginfo_voltage_title">Battery voltage</string>
	<string name="system_charginginfo_wattage_title">Power consumption</string>
	<string name="system_charginginfo_temp_title">Battery temperature</string>
	<string name="system_mods_statusbar_statusbar">Status bar</string>
	<string name="system_mods_statusbar_drawer">Notification drawer</string>
	<string name="system_mods_notifications">Notifications</string>
	<string name="system_mods_recents">Recent apps list</string>
	<string name="system_mods_betterpopups">Popup notifications</string>
	<string name="system_mods_floatingwindows">Floating windows</string>
	<string name="system_mods_applock">App lock</string>
	<string name="system_mods_qs">Quick Settings</string>
	<string name="system_mods_other">Other</string>
	<string name="launcher_gestures">Gestures</string>
	<string name="launcher_title">Launcher</string>
	<string name="launcher_summ">Display mods for selected launcher. For visual aid only, does not have any effect on mods.</string>
	<string name="launcher_compat_title">Performance mode</string>
	<string name="launcher_compat_summ">Alternative method of applying all launcher mods</string>
	<string name="launcher_folders">Folders</string>
	<string name="launcher_titles">App titles</string>
	<string name="launcher_privacyapps">Hidden apps</string>
	<string name="launcher_bugfixes">Bug fixes</string>
	<string name="controls_mods_fingerprint">Fingerprint scanner</string>
	<string name="controls_mods_power">Power key</string>
	<string name="controls_mods_volume">Volume keys</string>
	<string name="controls_mods_navbar">Navigation bar</string>
	<string name="controls_mods_fsg">Full screen navigation gestures</string>
	<string name="various_calluibright_night_start_title">Start</string>
	<string name="various_calluibright_night_end_title">End</string>
	<string name="settings">Settings</string>
	<string name="array_screenlock_bootonly">Require authentication after boot</string>
</resources>