<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:key="pref_key_cat">

	<org.strawing.customiuizermod.prefs.PreferenceEx
		android:title="@string/system_mods_screen"
		android:key="pref_key_system_cat_screen" />
	<org.strawing.customiuizermod.prefs.PreferenceEx
		android:title="@string/system_mods_audio"
		android:key="pref_key_system_cat_audio" />
	<org.strawing.customiuizermod.prefs.PreferenceEx
		android:title="@string/system_mods_vibration"
		android:key="pref_key_system_cat_vibration" />
	<org.strawing.customiuizermod.prefs.PreferenceEx
		android:title="@string/system_mods_toasts"
		android:key="pref_key_system_cat_toasts" />
	<org.strawing.customiuizermod.prefs.PreferenceEx
		android:title="@string/system_mods_statusbar_statusbar"
		android:key="pref_key_system_cat_statusbar" />
	<org.strawing.customiuizermod.prefs.PreferenceEx
		android:title="@string/system_mods_statusbar_drawer"
		android:key="pref_key_system_cat_drawer" />
	<org.strawing.customiuizermod.prefs.PreferenceEx
		android:title="@string/system_mods_notifications"
		android:key="pref_key_system_cat_notifications" />
	<org.strawing.customiuizermod.prefs.PreferenceEx
		android:title="@string/system_mods_qs"
		android:key="pref_key_system_cat_qs" />
	<org.strawing.customiuizermod.prefs.PreferenceEx
		android:title="@string/system_mods_recents"
		android:key="pref_key_system_cat_recents" />
	<org.strawing.customiuizermod.prefs.PreferenceEx
		android:title="@string/system_mods_betterpopups"
		android:key="pref_key_system_cat_betterpopups" />
	<org.strawing.customiuizermod.prefs.PreferenceEx
		android:title="@string/system_mods_floatingwindows"
		android:key="pref_key_system_cat_floatingwindows" />
	<org.strawing.customiuizermod.prefs.PreferenceEx
		android:title="@string/system_mods_applock"
		android:key="pref_key_system_cat_applock" />
	<org.strawing.customiuizermod.prefs.PreferenceEx
		android:title="@string/system_mods_lockscreen"
		android:key="pref_key_system_cat_lockscreen" />
	<org.strawing.customiuizermod.prefs.PreferenceEx
		android:title="@string/system_mods_other"
		android:key="pref_key_system_cat_other" />

</PreferenceScreen>