<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:miuizer="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:key="pref_key_cat">

	<org.strawing.customiuizermod.prefs.ListPreferenceEx
		android:key="pref_key_launcher_mods"
		android:title="@string/launcher_title"
		android:summary="@string/launcher_summ"
		android:entries="@array/launchers"
		android:entryValues="@array/launchers_val"
		android:defaultValue="1" />

	<org.strawing.customiuizermod.prefs.CheckBoxPreferenceEx
		android:key="pref_key_launcher_compat"
		android:title="@string/launcher_compat_title"
		android:summary="@string/launcher_compat_summ"
		android:defaultValue="false" />

	<org.strawing.customiuizermod.prefs.PreferenceCategoryEx
		miuizer:empty="true" />

	<org.strawing.customiuizermod.prefs.PreferenceEx
		android:title="@string/launcher_folders"
		android:key="pref_key_launcher_cat_folders" />
	<org.strawing.customiuizermod.prefs.PreferenceEx
		android:title="@string/launcher_titles"
		android:key="pref_key_launcher_cat_titles" />
	<org.strawing.customiuizermod.prefs.PreferenceEx
		android:title="@string/launcher_privacyapps"
		android:key="pref_key_launcher_cat_privacyapps" />
	<org.strawing.customiuizermod.prefs.PreferenceEx
		android:title="@string/launcher_gestures"
		android:key="pref_key_launcher_cat_gestures" />
	<org.strawing.customiuizermod.prefs.PreferenceEx
		android:title="@string/launcher_bugfixes"
		android:key="pref_key_launcher_cat_bugfixes" />
	<org.strawing.customiuizermod.prefs.PreferenceEx
		android:title="@string/system_mods_other"
		android:key="pref_key_launcher_cat_other" />

</PreferenceScreen>