<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:miuizer="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<org.strawing.customiuizermod.prefs.CheckBoxPreferenceEx
		android:key="pref_key_system_vibration_amp"
		android:title="@string/enable_mod"
		android:summary="@string/system_vibration_amp_val_summ"
		android:defaultValue="false" />

	<org.strawing.customiuizermod.prefs.PreferenceCategoryEx
		android:title="@string/system_vibration_amp_period_title"
		android:dependency="pref_key_system_vibration_amp"
		miuizer:dynamic="true">

		<org.strawing.customiuizermod.prefs.PreferenceEx
			android:key="pref_key_system_vibration_amp_period_start"
			android:title="@string/various_calluibright_night_start_title" />

		<org.strawing.customiuizermod.prefs.PreferenceEx
			android:key="pref_key_system_vibration_amp_period_end"
			android:title="@string/various_calluibright_night_end_title" />

	</org.strawing.customiuizermod.prefs.PreferenceCategoryEx>

	<org.strawing.customiuizermod.prefs.PreferenceCategoryEx
		android:title="@string/system_vibration_amp_val_title"
		android:dependency="pref_key_system_vibration_amp"
		miuizer:dynamic="true">

		<org.strawing.customiuizermod.prefs.SeekBarPreference
			android:key="pref_key_system_vibration_amp_ringer"
			android:title="@string/system_vibration_amp_ringer_title"
			android:dependency="pref_key_system_vibration_amp"
			android:defaultValue="100"
			miuizer:minValue="1"
			miuizer:maxValue="100"
			miuizer:stepValue="1"
			miuizer:format="%d%%" />

		<org.strawing.customiuizermod.prefs.SeekBarPreference
			android:key="pref_key_system_vibration_amp_notif"
			android:title="@string/system_vibration_amp_notif_title"
			android:defaultValue="100"
			miuizer:minValue="1"
			miuizer:maxValue="100"
			miuizer:stepValue="1"
			miuizer:format="%d%%" />

		<org.strawing.customiuizermod.prefs.SeekBarPreference
			android:key="pref_key_system_vibration_amp_other"
			android:title="@string/system_vibration_amp_other_title"
			android:dependency="pref_key_system_vibration_amp"
			android:defaultValue="100"
			miuizer:minValue="1"
			miuizer:maxValue="100"
			miuizer:stepValue="1"
			miuizer:format="%d%%" />

	</org.strawing.customiuizermod.prefs.PreferenceCategoryEx>

</PreferenceScreen>