<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:key="pref_key_cat">

	<org.strawing.customiuizermod.prefs.PreferenceEx
		android:title="@string/controls_mods_fingerprint"
		android:key="pref_key_controls_cat_fingerprint" />
	<org.strawing.customiuizermod.prefs.PreferenceEx
		android:title="@string/controls_mods_power"
		android:key="pref_key_controls_cat_power" />
	<org.strawing.customiuizermod.prefs.PreferenceEx
		android:title="@string/controls_mods_volume"
		android:key="pref_key_controls_cat_volume" />
	<org.strawing.customiuizermod.prefs.PreferenceEx
		android:title="@string/controls_mods_navbar"
		android:key="pref_key_controls_cat_navbar" />
	<org.strawing.customiuizermod.prefs.PreferenceEx
		android:title="@string/controls_mods_fsg"
		android:key="pref_key_controls_cat_fsg" />

</PreferenceScreen>